add paper & softcon

--- a/DM_Project.ipynb
+++ b/DM_Project.ipynb
@@ -334,7 +334,7 @@
         "    \n",
         "    target_code = get_code(target)\n",
         "    search_datas = pdr.get_data_yahoo(target_code, start, end)\n",
-        "    df = search_datas.rolling(window=25, min_periods=1).mean().dropna()\n",
+        "    df = search_datas.rolling(window=25, min_periods=1).mean().dropna() #데이터 전처리\n",
         "    vals = df['Close'].values\n",
         "    \n",
         "    window_size = 5*4\n",
